--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -29,6 +29,7 @@ npm-debug.log
 .git
 .gitignore
 README.md
+
 # debug
 npm-debug.log*
 yarn-debug.log*
@@ -44,3 +45,6 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# Custom: API configuration file (add this line)
+src/api.ts
